[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/components/ui/composition_browser.gd" id="1"]

[node name="CompositionBrowser" type="PanelContainer"]
custom_minimum_size = Vector2(600, 400)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SearchContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search compositions..."

[node name="SortOptionButton" type="OptionButton" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 0)

[node name="RefreshButton" type="Button" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[node name="InfoPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="InfoLabel" type="RichTextLabel" parent="VBoxContainer/InfoPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NewButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "New Composition"

[node name="LoadButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Delete"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="ImportButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Import"

[node name="ExportButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Export"